{
  "login": {
    "title": "Entrar",
    "subtitle": "Olá! Bem-vindo de volta, sentimos sua falta",
    "email_label": "Email",
    "email_placeholder": "exemplo@gmail.com",
    "email_required": "Por favor, insira seu email",
    "password_label": "Senha",
    "password_placeholder": "••••••••••••",
...
      "phone_hint": "(00) 00000-0000",
      "phone_required": "Telefone é obrigatório",
      "email": "Email (opcional)",
      "email_hint": "email@exemplo.com",
      "birth_date": "Data de Nascimento (opcional)",
      "birth_date_hint": "Selecione a data",
      "save": "Salvar"
    },
    "dashboard": {
      "quick_summary": "Resumo Rápido",
      "personal_info": "Informações Pessoais",
      "clinical_info": "Informações Clínicas",
      "administrative": "Administrativo",
...
